@@ -3,10 +3,12 @@ DIST asciidoc-8.1.0.tar.gz 761244 RMD160 1f041b7dc56dd2b9c5db4b1d5ac310cce470db3
 DIST asciidoc-8.2.6.tar.gz 739790 RMD160 c07d2eaa04d16275c44756236023c0789cf54310 SHA1 cce98ed670c462a3a007b03b6f92d2108c5bc405 SHA256 5e9c966cfcb9d08487da625b41ed5e007eedb2d1abbb996dd6f78f2c5bde08dc
 DIST asciidoc-8.2.7.tar.gz 843238 RMD160 d9b19b5bd90a7ee26b3d63ba8b5f6ce60841e62c SHA1 ec784654f01f3aa71af6453c8985839010759fab SHA256 da021d8f32e1bcacfd11b5bb12bd9a9cd9ec9532ad1a54bcd53fed211fe71af6
 DIST asciidoc-8.4.4.tar.gz 1160222 RMD160 96eb1569db0fa8c2e78cc713ee72a0c25646d3be SHA1 0306d1a41eb1060873ba4fa655112aeaa64001d1 SHA256 43181d4753376fe22d8a7949a94b5ebb439fd94a7b92791e9126e82632adfa62
+DIST asciidoc-8.4.5.tar.gz 1189280 RMD160 4e210df26962c1154cc131e3549b92762eefc8f7 SHA1 b1a8488f0c217a00084fa5f9f36cecc522e79b34 SHA256 e7e4df8fd984520ee692bb639679d51f5be279ef96dc23efd229e2bc100152db
 EBUILD asciidoc-7.0.4.ebuild 1465 RMD160 58dd8f501c14878482703d7a087b5dd2fe11817b SHA1 917dd6324f0ef6458c7fbdaeec08c4b69a482089 SHA256 7cf77b104d22dc233585ff14ba491046679f1b0550fce500138ebc6cf0fcdc74
 EBUILD asciidoc-8.1.0.ebuild 1521 RMD160 86c72e10ead35330ec2523f2ec032d6a72757d85 SHA1 0159ac3dbf8c53d7981d65cc6e7aca0fc7a5c8c5 SHA256 cc7c43aa971467dd9af3cb3234d2923d64fe58e723f74fc4789e8019348a6769
 EBUILD asciidoc-8.2.6.ebuild 1637 RMD160 679248508c7be257f43cc382a012ce3c4af33a61 SHA1 2a2b77520e6891000ef964ee26d09e962729d8c0 SHA256 edbb13f2c919c85faa2b426881d8f0fe7fad7fd9b314c3dd0efe1824b646c5d6
 EBUILD asciidoc-8.2.7.ebuild 1666 RMD160 1a252473b28db491c5b7a69bf704fa6e307fb6db SHA1 35697c84ab2f1283976eea56c761a2eb5b4930fd SHA256 22817093206376da8f2674f2f6a7a68ea58cf31424afa0b4ab8d1ff6357ae795
 EBUILD asciidoc-8.4.4.ebuild 1773 RMD160 d7e84080a66a72fb8a4124b8663fefbecc93f04a SHA1 bdfd62af0bb919fb3c57d4dca10d2ae830a28a07 SHA256 4160652ad4cecd2067ce122a76c44fcf6b3e9c0eed0a863514dfa4e0b4ed08c4
-MISC ChangeLog 6440 RMD160 926c72f9ca6be9698c4c9cfe44da4c26815a3541 SHA1 6541095259de3541ba8a6677085cecaa21862bbb SHA256 e58de2a75e038d7ff3db5d4a01522d860896218cc6d698aecc796795d2b79ada
+EBUILD asciidoc-8.4.5.ebuild 1754 RMD160 81fb871b8d3811c88e936c86a11c4b2b86c40797 SHA1 8dc5bf508b828f2d871922be5f1a49765b4954be SHA256 e50b4a4fbe22f3fb49c70f35a395883c2a6c1f644a441c581317ef4d73579f8c
+MISC ChangeLog 6605 RMD160 37f4f15fb0cc1539fe45447d31bd09d7752ad318 SHA1 0e1e87f4dd749d9766193a6808b30209a5b37721 SHA256 fbfb8e90ecfd78dfea2f465de0ae466fc5cd0b4fd2aa94be3ef65e29e6bf9516
 MISC metadata.xml 159 RMD160 a94e7b2c191d1593b8bc416d266571e001c2f673 SHA1 3c1d0831d8acacef390234d20d7711cabded861a SHA256 52cf1b9dda72e2d61fef95515c8a124ac9f1196e5509e5636e269f396fcba8a3
