@@ -1,6 +1,11 @@
 # ChangeLog for app-text/asciidoc
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/asciidoc/ChangeLog,v 1.47 2009/05/22 22:10:56 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/asciidoc/ChangeLog,v 1.48 2009/06/27 07:32:27 patrick Exp $
+
+*asciidoc-8.4.5 (27 Jun 2009)
+
+  27 Jun 2009; Patrick Lauer <patrick@gentoo.org> +asciidoc-8.4.5.ebuild:
+  Bump to 8.4.5, small fixes by Tim Harder. Closes #275570
 
 *asciidoc-8.4.4 (22 May 2009)
 
